--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 toml = "*"
+packages = [
+    { include = "test_poetry" }
+]
 
 
 [build-system]
